[package]
name = "filehost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
google-authenticator = { version = "0.2.1" }
percent-encoding = "2.1.0"
qrcode = { version = "0.12", default-features = false }
time = "0.3.3"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rand = "0.8.4"
envconfig = "0.10.0"
byte-unit = "4.0.12"
